1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Symbol.m: Don't include stdio.h or stdarg.h.

	* DefObject.[hm], defobj.h: New method +conformsTo:.

	* Customize.h: Include DefClass.h.

	* Customize.[hm] (getNextPhase, setNextPhase): Use deference to
	casts to BehaviorPhase_s instead of doing constant array offset
	into a Class.

	* make-h2x: Don't accept @implementation with a name starting with "_".

	* defobj.h (archiver{Register,Unregister},
	{lisp,HDF5}Archiver{Get,Put}): Prefix declaration with `extern'.

1998-12-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* DefClass.m ([CreatedClass_s +createBegin:]): Don't use temporary
	variable.

	* Customize.h (createByCopy, createByMessageTo,
	createByMessageToCopy): Return YES/NO instead of 1/0.

	* Create.m: Don't include swarmconfig.h. 

1998-12-19  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* defobj.m (_defobj_implement): Call setTypeImplemented: Archiver
	on id_Archiver_c.

	* defobj.h (Archiver): New protocol.  Move archiver functions
	inside this protocol declaration.

	* Archiver.m: Include hdf5.h if HAVE_HDF5 is defined.
	Make archiver of type Archiver_c.  Only include HDF things if 
	HAVE_HDF5 is defined.
	([Archiver_c +createBegin:]): Make newArchiver of type Archiver_c.
	([Archiver_c -createEnd]): Make call to super createEnd.
	([Archiver_c -setHDF5Path): New method.

	* Archiver.[hm] (Archiver_c): Renamed from Archiver.
	Add HDF5Path ivar and setter.  Declare/define HDF5Archiver{Get,Put}.

1998-12-18  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Archiver.m: Don't include objc/objc-api.h.
	(Application): New internal class.
	(lispProcessPairs): Pass map update function instead reader
	function and map.
	(lispProcessMakeObjcPairs, lispProcessApplicationPairs): Add map
	update function, pass it to lispProcessPairs.
	(lispArchiverPut, lispArchiverGet): Get object map from
	Application object.
	([Archiver +createBegin:]): Initialize applicationMap in 
	one expression.