@@ -1,3 +1,8 @@
+1998-12-28  Marcus G. Daniels  <mgd@chama.santafe.edu>
+
+	* defobj.h (Archiver, Serialization): Add protocol summary and
+	description strings.
+
 1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* Symbol.m: Don't include stdio.h or stdarg.h.
